logs/main_21296998.out
  File "/home/icb/francesca.drummer/1-Projects/spatial_ccc_experiments/src/methods/commot/commot_script.py", line 30
    adata.write(par["output"]})
                             ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
